--- a/src/inventory/Items/Items.css
+++ b/src/inventory/Items/Items.css
@@ -1,4 +1,4 @@
-.programs-container {
+.items-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
@@ -20,13 +20,13 @@
     background-color:coral;
 }
 @media only screen and (max-width:576px) {
-    .programs-container {
+    .items-container {
         grid-template-columns: repeat(1, 1fr);
     }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 992px) {
-    .programs-container {
+    .items-container {
         grid-template-columns: repeat(2, 1fr);
     }
 }
