--- a/src/Action/Action.css
+++ b/src/Action/Action.css
@@ -1,3 +1,15 @@
 .text{
     color:black;
 }
+.note{
+    border: 2px solid grey;
+    background-color: bisque;
+}
+.action-btn{
+    background-color: burlywood;
+    border: none;
+
+}
+.action-btn:hover{
+    background-color: coral;
+}
