--- a/src/Catalogs/Catalogs.css
+++ b/src/Catalogs/Catalogs.css
@@ -6,3 +6,13 @@
         
     
 }
+@media only screen and (max-width:577px) {
+    .items-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+    @media only screen and (min-width: 577px) and (max-width: 992px) {
+        .items-container{
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
